--- a/config.env
+++ b/config.env
@@ -1,1 +1,3 @@
-
+PORT = 3000
+MONGO_URI = mongodb://TfEZ6MhRUFX004dyXPwamEQH@cl8vc3zgi001mt5bymqfw0hxy:27017/?authSource=cl8vc3zgh000fbyt50qlzhf8v
+JWT_SECRET = wufewiufheruifheriofefjeoijf
