--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
-
 NEXT_PUBLIC_BASE_URL = http://localhost:3000
+PORT = 3000
+MONGO_URI = mongodb://TfEZ6MhRUFX004dyXPwamEQH@cl8vc3zgi001mt5bymqfw0hxy:27017/?authSource=cl8vc3zgh000fbyt50qlzhf8v
+JWT_SECRET = wufewiufheruifheriofefjeoijf
